NetRexx 3.05 [April 27th, 2017]

- First release after Kermit Kiser's passing. He will be remembered fondly for all his work.
- NetRexx has moved to Git on SourceForge for version management
- A new level of the Eclipse Java Compiler in NetRexxF.jar
- A build error on IBM's J9 JVM's was fixed
- The org.netrexx.address package was added as a foundation for OS shell interaction
- New documentary comments in nrc.bat and NetRexxC.bat for windows (Kermit Kiser)
- Java2Nrx and sysutils tools moved from contrib repository to tools (Marc Remes)
- All examples are now versioned under the master branch
- A fix for the RexxComparator class
- Various fixes and additions to documents.

NetRexx 3.04 [June 1st, 2015]

- a jsr 199 compliant way of calling the java compiler
    - Java source is saved on disk by the 3.04 translator if options -keep or -keepasjava are specified just as in release 3.03 of NetRexx. However NetRexx 3.04 does not write java to disk otherwise since it is no longer required in order to produce class files.
- an automatic search for a compiler : this release of the translator also finds compilers that are not on the classpath if one cannot be found
   via the classpath; for example in the directory the translator is loaded from or in any directory associated with the current JVM. This
   may reduce installation issues due to "Java compiler not found".
- integration of Pipes for NetRexx (available in the NetRexxF.jar file)
- a new level of (4.4.2) of the eclipse java compiler (available in the NetRexxF.jar file)
- a less verbose startup message when the translator is started without options
  - NetRexxC option list now requires "-help"
- new: NETREXX-120, option -javac indicates a preference for the javac compiler
- new: NETREXX-120, option -ecj indicates a preference for the ecj compiler
- new: the tools section now has support for the vim and nano editors
- NetRexx now requires JVM 1.6 to build and run the translator
- new: NETREXX-69, do binary support