@@ -1,2 +1,23 @@
 *.ilg
+*.class
+*.aux
+*.exitCode
+*.idx
+*.ind
+*.log
+*.out
+*.rai
+*.rao
+*.sh
+*.stderr
+*.stdout
+*.toc
+*.lol
+*.lof
+*.lot
+documentation/njpipes/*.java
+documentation/njpipes/*.java
+documentation/nrl/*.java
+documentation/pg/*.java
+documentation/ug/*.java
 
