@@ -1,0 +1,11 @@
+\chapter{Annotation instruction}\label{refparse}
+\index{Annotate,instruction}
+\index{Instructions,Annotate}
+\begin{shaded}
+\begin{alltt}
+\textbf{@}
+\end{alltt}
+\end{shaded}
+An \emph{annotation} starts with an \textbf{@} (commercial at sign)
+and is passed through unchanged to the generated Java
+source. To interpret a program with an annotation is an error.
