@@ -55,12 +55,12 @@ This character set may be limited in size (sometimes to a limit of 256
 different characters, which have a convenient 8-bit representation), or
 it may be much larger.  The \emph{Unicode}
 \footnote{
-\emph{The Unicode Standard: Worldwide Character Encoding}.,
-Version 1.0.  Volume 1, ISBN 0-201-56788-1, 1991, and Volume 2, ISBN
-0-201-60845-6 1992, Addison-Wesley, Reading, MA.
+\emph{The Unicode Standard, version 6.0}.,
+The Unicode Consortium, Mountain View, 2011, ISBN 09781936213016.
 }
-character set, for example, allows for 65536 characters, each encoded in
-16 bits.
+character set, for example, allows for 1,114,112 code points, of which
+currently 128,000 are defined as characters. These are represented,
+depending on the serialization format, in one to four bytes.
  
 Usually, most or all of the characters in the second (data) character
 set are also allowed within a \nr{} program, but only within
