@@ -401,6 +401,7 @@ language and supercedes all earlier versions.
 \input{nr3assig}
 \input{nr3invar}
 \input{nr3keys}
+\input{nr3annot}
 %\input{nr3address}
 \input{nr3class}
 \input{nr3do}
