@@ -1,3 +1,9 @@
+NetRexx 3.06 beta
+
+- Method level annotations will pass through to Java source.
+
+
+
 NetRexx 3.05 [April 27th, 2017]
 
 - First release after Kermit Kiser's passing. He will be remembered fondly for all his work.
